k8s/k8s-config/ecommerce/environments/backend/services/ecommerce-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend-service
  namespace: ecommerce
spec:
  ports:
    - name: tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: ecommerce-backend-deployment
  type: ClusterIP
