k8s/k8s-config/ecommerce/environments/backend/services/ecommerce-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-backend-ingress
  namespace: ecommerce
spec:
  defaultBackend:
    service:
      name: ecommerce-backend-service
      port:
        number: 8080
  ingressClassName: nginx
  rules:
    - host: api-ecommerce.anphuc.vn
      http:
        paths:
          - backend:
              service:
                name: ecommerce-backend-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
